# django-cookiecutter

./: .gitignore  .travis.yml  Dockerfile  Makefile  README.md  cookiecutter.json  requirements.txt
{{ cookiecutter.project_slug }}/: .editorconfig  .env.template  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  Dockerfile  Pipfile  Procfile  README.md  local.Dockerfile  manage.py  pyproject.toml  pytest.ini  setup.cfg
{{ cookiecutter.project_slug }}/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
{{ cookiecutter.project_slug }}/.helm/: Chart.yaml  secrets.yaml  values.yaml
{{ cookiecutter.project_slug }}/.helm/templates/: _helpers.tpl  api-deployment.yaml  api-hpa.yaml  api-service.yaml  api-servicemonitor.yaml  ingress.yaml  migrations-job.yaml  pull-secret.yaml
{{ cookiecutter.project_slug }}/.swarm/: base.yml  prod.yml  stage.yml
{{ cookiecutter.project_slug }}/config/: settings.py  wsgi.py
{{ cookiecutter.project_slug }}/requirements/: base.txt  dev.txt
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/: celery.py  settings.py  urls.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/main/: __init__.py  admin.py  apps.py  views.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/schema/: urls.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/swagger/: urls.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/users/: __init__.py  apps.py  models.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/utils/: test_runner.py
(+10 files in other folders)
