[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = ""
authors = ["{{ cookiecutter.author }}"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.6"
django-cors-headers = "^3.8.0"
django-environ = "^0.4.5"
djangorestframework = "^3.12.4"
djangorestframework-jwt = "^1.11.0"
factory-boy = "^3.2.0"
gunicorn = "^20.1.0"
psycopg2 = "^2.9.1"
requests = "^2.26.0"
sentry-sdk = "^1.3.1"
whitenoise = "^5.3.0"
django-s3-storage = "^0.13.4"
drf-spectacular = "^0.18.0"
django-anymail = {extras = ["mailgun"], version = "^8.4"}
django-extensions = "^3.1.3"
pytest = "^6.2.4"
pytest-django = "^4.4.0"
pytest-mock = "^3.6.1"
pytest-factoryboy = "^2.1.0"
flake8 = "^3.9.2"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
pre-commit = "^2.14.0"
isort = "^5.9.3"
rope = "^0.19.0"

[tool.isort]
profile = "black"

[tool.pytest]
DJANGO_SETTINGS_MODULE = "{{ cookiecutter.project_slug }}.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
